# procurements_api_parser

./: README.md  prozorro_api_parser.py  prozorro_audit_api_parser.py  prozorro_public_api_parser.py  pyproject.toml  requirements.txt  sheets_writer.py  tender_detail_parser.py
parser_utils/: awards_parser.py  bids_parser.py  broken_contracts_scraper.py  complaints_parser.py  config.py  contracts_parser.py  items_parser.py  lots_parser.py  milestones_parser.py  sqlite_database_utils.py  tender_parser.py
procurements_api_parser/: bids_parser.py  complaints_parser.py  config.py  contracts_parser.py  items_parser.py  sqlite_database_utils.py  tender_parser.py
procurements_api_parser/cli/: prozorro_public_api_parser.py  sheets_writer.py  tender_detail_parser.py
