[tool.poetry]
name = "procurements_api_parser"
version = "0.2.0"
description = "Ukrainian Openprocurement API parser"
authors = ["Your Name <you@example.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7.1,<3.11"
certifi = "^2021.10.8"
charset-normalizer = "^2.0.7"
idna = ">=2.5,<2.11"
numpy = ">=1.19.0,<1.20.0"
pandas = "^1.0.0"
python-dateutil = "^2.8.0"
pytz = "^2021.1"
requests = "^2.25.0"
six = "^1.16.0"
tqdm = "^4.60.0"
urllib3 = "^1.26.4"

[tool.poetry.dev-dependencies]

[tool.poetry.scripts]
prozorro_public_api_parser = "procurements_api_parser.cli.prozorro_public_api_parser:main"
sheets_writer = "procurements_api_parser.cli.sheets_writer:main"
tender_detail_parser = "procurements_api_parser.cli.tender_detail_parser:main"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
